--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,4 +2,6 @@
 <p><%= @task.details %></p>
 <p><%= @task.completed %></p>
 
+<%= link_to 'Edit this task', edit_task_path %>
+
 <%= link_to 'Back to MY Tasks', tasks_path %>
