Checkbox implementation+Default value of completed to false

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -9,6 +9,10 @@
     <%= f.label :details %>
     <%= f.text_field :details %>
   </p>
+  <p>
+    <%= f.label(:completed, "Task Completed") %>
+    <%= f.check_box(:completed) %>
+  </p>
   <%= f.submit %>
 <% end %>
 
